--- a/Views/Authentication/Login.cshtml
+++ b/Views/Authentication/Login.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model AuthSampleRoleBased.Models.DTOs.LoginVm;
 @{
     Layout = null;
 }
@@ -15,7 +15,51 @@
 </head>
 <body>
 
-    <h3>Login Page</h3>
+    <div class="container">
+        
+        <div class="row mt-5 justify-content-center">
+            <div class="col-md-6">
+                <h3>Login Page</h3>
+
+                <div class="card shadow-sm">
+
+                    <div class="card-body">
+                        @if (TempData["msg"] != null)
+                        {
+                            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                <strong>@TempData["msg"]</strong>
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
+                        }
+
+                        <form method="post" asp-action="Login">
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" class="form-control" id="username" asp-for="Username">
+                                <p class="text-danger">
+                                    <span asp-validation-for="Username"></span>
+                                </p>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" asp-for="Password">
+                                <p class="text-danger">
+                                    <span asp-validation-for="Password"></span>
+                                </p>
+                            </div>
+
+                            <button type="submit" class="btn btn-primary">Login</button>
+                        </form>
+
+                        <hr />
+                        <p>Don't have account ? <a class="btn btn-link" asp-controller="Authentication"
+                                                    asp-action="Registration">Register</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
